--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -24,6 +24,14 @@
         </div>
       </div>
 
+      <!-- Sección de Solicitudes Procesadas Recientemente -->
+      <div class="recent-requests-container">
+        <h3>Hola Luisa, soy tu asistente aqui esta las solicitudes procesadas recientemente:</h3>
+        <div id="recentRequests" class="recent-list">
+          <p class="loading">Cargando solicitudes...</p>
+        </div>
+      </div>
+
       <form action="/generar" method="post" id="certificateForm">
         <div class="form-group">
           <label for="cedula">Cédula:</label>
